--- a/core3/parent/trunk/pom.xml
+++ b/core3/parent/trunk/pom.xml
@@ -28,6 +28,7 @@
 		<maven-jar-plugin.version>2.3.1</maven-jar-plugin.version>
 		<maven-surefire-plugin.version>2.7.1</maven-surefire-plugin.version>
 		<maven-assembly-plugin.version>2.2</maven-assembly-plugin.version>
+		<maven-enforcer-plugin.version>1.0</maven-enforcer-plugin.version>
 	</properties>
 
 	<distributionManagement>
