--- a/core3/command-executor-impl/trunk/pom.xml
+++ b/core3/command-executor-impl/trunk/pom.xml
@@ -85,6 +85,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
+			<artifactId>work-api</artifactId>
+			<version>3.0.0-alpha3-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
 			<artifactId>work-spring-hack</artifactId>
 			<version>3.0.0-alpha1</version>
 		</dependency>
