--- a/core3/archetypes/trunk/api-provider-plugin/pom.xml
+++ b/core3/archetypes/trunk/api-provider-plugin/pom.xml
@@ -10,6 +10,7 @@
     <version>3.0.0-alpha1-SNAPSHOT</version>
   </parent>
 
+  <groupId>org.cytoscape.archetypes</groupId>
   <artifactId>api-provider-plugin</artifactId>
   <packaging>maven-archetype</packaging>
   <name>Archetype - Cytoscape API Provider Plugin</name>
