--- a/core3/archetypes/trunk/api-provider-plugin/pom.xml
+++ b/core3/archetypes/trunk/api-provider-plugin/pom.xml
@@ -6,7 +6,7 @@
 
   <parent>
     <groupId>org.cytoscape</groupId>
-    <artifactId>archetypes</artifactId>
+    <artifactId>archetypes-parent</artifactId>
     <version>3.0.0-alpha1-SNAPSHOT</version>
   </parent>
 
