--- a/core3/archetypes/trunk/pom.xml
+++ b/core3/archetypes/trunk/pom.xml
@@ -7,7 +7,7 @@
   </parent>
 
   <groupId>org.cytoscape</groupId>
-  <artifactId>archetypes</artifactId>
+  <artifactId>archetypes-parent</artifactId>
   <packaging>pom</packaging>
   <version>3.0.0-alpha1-SNAPSHOT</version>
   <name>Archetypes Parent</name>
