--- a/core3/io-impl/trunk/pom.xml
+++ b/core3/io-impl/trunk/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<parent>
 		<groupId>org.cytoscape</groupId>
@@ -21,38 +22,38 @@
 
 	<packaging>bundle</packaging>
 
-    <scm>
-        <connection>scm:svn:http://chianti.ucsd.edu/svn/core3/io-impl/trunk</connection>
-        <developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/io-impl/trunk</developerConnection>
-        <url>http://chianti.ucsd.edu/svn/core3/io-impl/trunk</url>
-    </scm>
+	<scm>
+		<connection>scm:svn:http://chianti.ucsd.edu/svn/core3/io-impl/trunk</connection>
+		<developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/io-impl/trunk</developerConnection>
+		<url>http://chianti.ucsd.edu/svn/core3/io-impl/trunk</url>
+	</scm>
 
-    <repositories>
-        <!-- bootstrap for cytoscape dependencies, namely the parent POM snapshots -->
-        <repository>
-            <id>cytoscape_snapshots</id>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <name>Cytoscape Snapshots</name>
-            <url>http://cytoscape.wodaklab.org/nexus/content/repositories/snapshots/</url>
-        </repository>
-        <!-- bootstrap for cytoscape dependencies, namely the parent POM releases -->
-        <repository>
-            <id>cytoscape_releases</id>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <name>Cytoscape Releases</name>
-            <url>http://cytoscape.wodaklab.org/nexus/content/repositories/releases/</url>
-        </repository>
-    </repositories>
+	<repositories>
+		<!-- bootstrap for cytoscape dependencies, namely the parent POM snapshots -->
+		<repository>
+			<id>cytoscape_snapshots</id>
+			<snapshots>
+				<enabled>true</enabled>
+			</snapshots>
+			<releases>
+				<enabled>false</enabled>
+			</releases>
+			<name>Cytoscape Snapshots</name>
+			<url>http://cytoscape.wodaklab.org/nexus/content/repositories/snapshots/</url>
+		</repository>
+		<!-- bootstrap for cytoscape dependencies, namely the parent POM releases -->
+		<repository>
+			<id>cytoscape_releases</id>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+			<releases>
+				<enabled>true</enabled>
+			</releases>
+			<name>Cytoscape Releases</name>
+			<url>http://cytoscape.wodaklab.org/nexus/content/repositories/releases/</url>
+		</repository>
+	</repositories>
 
 	<build>
 		<resources>
@@ -93,6 +94,11 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
+			<artifactId>io-api</artifactId>
+			<version>3.0.0-alpha3-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
 			<artifactId>layout-api</artifactId>
 			<version>3.0.0-alpha2-SNAPSHOT</version>
 		</dependency>
@@ -126,74 +132,30 @@
 			<artifactId>com.springsource.com.lowagie.text</artifactId>
 			<version>2.0.8</version>
 		</dependency>
-		<!--
+		<!-- <dependency> <groupId>org.freehep</groupId> <artifactId>freehep-graphicsio-pdf</artifactId> 
+			<version>2.0</version> </dependency> <dependency> <groupId>org.freehep</groupId> 
+			<artifactId>freehep-graphicsio-ps</artifactId> <version>2.0</version> </dependency> 
+			<dependency> <groupId>org.freehep</groupId> <artifactId>freehep-graphicsio-svg</artifactId> 
+			<version>2.0</version> </dependency> <dependency> <groupId>org.freehep</groupId> 
+			<artifactId>freehep-graphicsio-swf</artifactId> <version>2.0</version> </dependency> 
+			<dependency> <groupId>org.freehep</groupId> <artifactId>freehep-io</artifactId> 
+			<version>2.0.1</version> </dependency> <dependency> <groupId>org.freehep</groupId> 
+			<artifactId>freehep-swing</artifactId> <version>2.0.2</version> </dependency> 
+			<dependency> <groupId>org.freehep</groupId> <artifactId>freehep-export</artifactId> 
+			<version>2.0.3</version> </dependency> <dependency> <groupId>org.freehep</groupId> 
+			<artifactId>freehep-graphics2d</artifactId> <version>2.0</version> </dependency> 
+			<dependency> <groupId>org.freehep</groupId> <artifactId>freehep-graphicsio</artifactId> 
+			<version>2.0</version> </dependency> <dependency> <groupId>org.freehep</groupId> 
+			<artifactId>freehep-graphicsio-emf</artifactId> <version>2.0</version> </dependency> 
+			<dependency> <groupId>org.freehep</groupId> <artifactId>freehep-util</artifactId> 
+			<version>2.0.1</version> </dependency> <dependency> <groupId>org.freehep</groupId> 
+			<artifactId>freehep-xml</artifactId> <version>2.0.1</version> </dependency> -->
 		<dependency>
-			<groupId>org.freehep</groupId>
-			<artifactId>freehep-graphicsio-pdf</artifactId>
-			<version>2.0</version>
+			<groupId>com.sun.xml.bind</groupId>
+			<artifactId>jaxb-impl</artifactId>
+			<version>2.2.1</version>
 		</dependency>
-		<dependency>
-			<groupId>org.freehep</groupId>
-			<artifactId>freehep-graphicsio-ps</artifactId>
-			<version>2.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.freehep</groupId>
-			<artifactId>freehep-graphicsio-svg</artifactId>
-			<version>2.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.freehep</groupId>
-			<artifactId>freehep-graphicsio-swf</artifactId>
-			<version>2.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.freehep</groupId>
-			<artifactId>freehep-io</artifactId>
-			<version>2.0.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.freehep</groupId>
-			<artifactId>freehep-swing</artifactId>
-			<version>2.0.2</version>
-		</dependency>
-		<dependency>
-			<groupId>org.freehep</groupId>
-			<artifactId>freehep-export</artifactId>
-			<version>2.0.3</version>
-		</dependency>
-		<dependency>
-			<groupId>org.freehep</groupId>
-			<artifactId>freehep-graphics2d</artifactId>
-			<version>2.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.freehep</groupId>
-			<artifactId>freehep-graphicsio</artifactId>
-			<version>2.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.freehep</groupId>
-			<artifactId>freehep-graphicsio-emf</artifactId>
-			<version>2.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.freehep</groupId>
-			<artifactId>freehep-util</artifactId>
-			<version>2.0.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.freehep</groupId>
-			<artifactId>freehep-xml</artifactId>
-			<version>2.0.1</version>
-		</dependency>
-		-->
-		<dependency>
-		  <groupId>com.sun.xml.bind</groupId>
-		  <artifactId>jaxb-impl</artifactId>
-		  <version>2.2.1</version>
-		</dependency>
-		
+
 		<!-- For Testing -->
 		<dependency>
 			<groupId>junit</groupId>
@@ -208,10 +170,10 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-		  <groupId>org.mockito</groupId>
-		  <artifactId>mockito-all</artifactId>
-		  <version>1.8.1</version>
-		  <scope>test</scope>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<version>1.8.1</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
